--- a/reports/midterm_report.tex
+++ b/reports/midterm_report.tex
@@ -62,11 +62,11 @@
 \DeclareMathOperator{\attach}{attach}
 \DeclareMathOperator{\relabel}{relabel}
 \DeclareMathOperator{\detach}{detach}
-\def\Card\#1\{\left\textbar{}
 \def\RuleSeq{\mathrm{RuleSeq}\xspace}
 \def\Graphs{\mathcal{G}\xspace}
 \def\Concepts{\mathcal{C}\xspace}
 \def\Hypotheses{\mathcal{H}\xspace}
+\def\ruleseq{\rho\xspace}
 
 \title{CS 476 Intermediate Report}
 \author{Alli Nilles (\texttt{nilles2}) and Spencer Gordon (\texttt{slgordo2})}
@@ -76,6 +76,7 @@
 \maketitle
 
 \newcommand{\step}[1]{\xrightarrow{#1}}
+\newcommand{\steps}[1]{\xRightarrow{#1}}
 
 In our project proposal, motivated by applications in self-assembling
 robotic system, we asked ``Might it be possible to learn compact rule
@@ -106,7 +107,7 @@ project.
 \subsection{Refinement of Project
 Scope}\label{refinement-of-project-scope}
 
-We retain the same definition of graph grammars {[}@litovsky{]}
+We first recall the definition of graph grammars {[}@litovsky{]}
 {[}@klavins{]}:
 
 We consider \emph{simple labelled graphs}, \(G = (V,E,l)\) where \(V\)
@@ -147,62 +148,46 @@ a connected assembly with certain topological or connectivity
 properties.
 
 \subsubsection{Our concept class of
-interest}\label{our-concept-class-of-interest}
+  interest}\label{our-concept-class-of-interest}
 
-In particular, we are interested in \emph{programmed context-sensitive
-graph replacement systems}, as described in {[}@gg\_handbook{]}. This
-area of research introduces control-flow statements for specifying the
-order of application of rules: for instance, we may specify that while
-rule 1 applies, apply it repeatedly; then apply rule 2 until rule 1 is
-applicable again. Such ``programmable'' graph rewriting specifications
-can be used for decision procedures.
+We have so far focused on a very restricted model of a context-sensitive graph grammar, which we describe completely here, along with the motivation.
 
-In this paper, we will examine the case where we apply a given sequence
-of rules for a number of iterations that is proportional to the size of
-the overall graph. After this number of rewrites, we examine the graph -
-if it is connected, we consider this an ``accepting'' state, and
-otherwise we reject.
+In order to start talking about learning graph grammars, we needed to come up with a way of taking a graph grammar and using it to classify an input graph. We came up with the idea having a given grammar classify a graph according to its connectivity under some reasonable number of transformations according to the grammar. Here's the model we used:
 
-Additionally, we will consider only \emph{node-preserving} rewrites, in
-which the number of nodes on the left and right sides of the rewrite are
-the same. Edges may be added and removed in a rewrite, and labels may
-change.
+We consider labeled graphs $G = (V,E,\ell)$ as above where $V = [k]$ for some $k\in \N$. Let $\Graphs_{k,\Sigma}$ be the set of all such labeled graphs with $V=[k]$ and labels over the alphabet $\Sigma$.
 
-Is this concept class efficiently PAC learnable? If not, what
-constraints can we add to the concept class to make it learnable?
-Likewise, if not, what augmentations to the basic PAC learning model
-(such as membership and equivalence queries) do we need to add to make
-the concept learnable? In this fashion we are exploring the ``frontier''
-of learnable concept classes and learning models in this relatively
-unexplored formulation of graph grammars.
+If we allowed only a fixed number of transformations according to a grammar for any graph, graphs above a certain size would be indistinguishable for any given concept, since there simply wouldn't be enough time for a rule to apply to each vertex in the graph.
 
-\subsection{Definitions}\label{definitions}
+As a result, we considered a concept class in which the number of allowed operations was a function of the size of the graph.
 
-Let \(\RuleSeq_\Sigma\) be a sequence of rules over a finite set of
-labels \(\Sigma\), where a rule is a node-preserving graph rewrite.
+Here's the model we considered: A rule $r \in R_{\Sigma}$ is a pair of graphs $r \in \Graphs_{k,\Sigma}^2$ with $k \leq 3$.
 
-Let \(\Graphs_{n,\Sigma}\) denote the set of all pairs \((G,\ell)\)
-where \(G\) is a graph on vertex set \([n]\) and
-\(\ell : [n] \to \Sigma\) assigns a label to each vertex. Let
-\(\Graphs_{\Sigma} = \cup_{n\geq 0} \Graphs_{n,\Sigma}\).
+Two graphs $G,G' \in \Graphs$ are related by the application of rule $r = (H,H')$, written $G \step{r} G'$ if there exists a subgraph $J \subset G$ isomorphic to $H$ and $G'$ is equal to $G$ with $J$ replaced by $J'$ where $J'$ is isomorphic to $H'$ under the same permutation for which $J$ was isomorphic to $H$. Moreover, it has to be the case that if there all multiple such sugraphs $J$ isomorphic to $H$, the lexicographically least such one is chosen. Intuitively, $G \step{r} G'$ if you can get $G'$ by replacing the lexicographically least $H$-isomorphic subgraph of $G$ with a corresponding $H'$-isomorphic graph.
 
-For each rule sequence \(S\in \RuleSeq\), there is a corresponding step
-relation \(\step{S}\) such that \[G {\step{S}} G'\] if and only \(G\)
-differs from \(G'\) by a single application of the first rule in \(S\)
-that can be applied, to the lexicographically first vertex or vertices
-to which it can be applied.
+The set of all sequences of rules is given by $\RuleSeq_{\Sigma} = R_{\Sigma}^*$. We define the semantics of a rule sequence $\rho = r_1r_2\dotsm r_m \in \RuleSeq_{\Sigma}$ as follows: We define a relation $\step{\rho}$ such that $G \step{\rho} G'$ if and only if there exists an $i\leq m$ such that $G\step{r_i} G'$ and there does not exist a subgraph $H \subseteq G$ isomorphic to the left-hand side of any rule $r_j$ for all $j < i$. Intuitively, two graphs are related by $\rho$ if they differ by the application of the lexicographically least rule in $\rho$ that is applicable to $G$. In this way, we define an ordering of the rules such that we always apply the leftmost rule that matches the current graph to update the graph.
 
-For any \(S\in \RuleSeq\), we define the function
-\(f_S : \Graphs_{\Sigma} \to \Set{0,1}\) as follows:
-\[f_S(G) = \begin{cases}
-    1 &\,\text{if after $N |V(G)|$ steps of ${\step{S}}$ starting with $G$ a
-    stable, connected graph is formed.}\\
+To write down a rule over graphs of size $3$ with labels from $\Sigma$, we will introduce notation to describe small graphs compactly. For a graph on three vertices we can write down a sequence of three labels $ABC \in \Sigma$ and add the $|$ character between pairs of symbols or after the last symbol to indicate that there is no edge between the pair of vertices around the $|$ or between the first and last vertex, respectively.
+
+Thus, $AAA$ denotes a triangle graph with every vertex labeled $A$, and $A|A|A|$ denotes the graph of 3 vertices labeled $A$ with no edges. Under this notation, the following graphs are isomorophic: $A|AA = AA|A = AAA|$.
+
+We can define an iterated version of the relation $\step{\rho}$, denoted $\steps{\rho}_i$, where $G \steps{\rho}_i G'$ if there is a sequence of exactly $i$ steps $G$ transforming $G$ into $G'$ under $\rho$.
+
+Finally, since there is a unique next graph under this model of graph grammar (since the rule application is deterministic) we can treat $\rho$ as a function, and write $\rho(G)$ for the graph obtained by a single step under $\rho$. We'll define $\rho(G) =G$ if no rules in $\rho$ apply to $G$. We'll write $\rho^i(G)$ for the $i$-th iterated application of $\rho$ to $G$.
+
+We now define a function $f_{\rho,c} : \Graphs_{\Sigma} \to \Set{0,1}$ as follows:
+\[f_{\rho,c}(G) = \begin{cases}
+    1 &\,\text{if $\rho^{c\Card{V(G)}}(G) = \rho^{c\Card{V(G)}+1}(G)$ and $\rho^{c\Card{V(G)}}(G)$ is connected}\\
     0 &\,\text{otherwise}
   \end{cases}\]
 
 Our concept class will be
-\(\Concepts_\Sigma = \Setbar{f_S}{S\in \RuleSeq_\Sigma}\). Our
-hypothesis class will be \(\Hypotheses_{\Sigma} = \Concepts_\Sigma\).
+\(\Concepts_{\Sigma,c} = \Setbar{f_{\rho,c}}{\rho\in \RuleSeq_\Sigma}\).
+
+As in the proof of Kearns and Vazirani that DFA are inherently unpredictable, we consider the restriction of our concept class to inputs of a given size $n$, where $n$ is the number of vertices of the graph classified by a concept. We write this restriction as $\Concepts_{\Sigma,c,n}$.
+
+Once formulating this definition, the first question we wanted to address was whether this concept class was PAC-learnable, and we were able to show that it is at least as hard as learning the concept class of DFAs since we can reduce learning a DFA to learning a corresponding graph grammar of this form. The main idea behind the reduction is presented below:
+
+\subsection{Definitions}\label{definitions}
 
 \textbf{Definition {[}@kearns1994{]}:} a concept class \(C\) over
 instance space \(X\) PAC-reduces to the concept class \(C'\) over
@@ -221,96 +206,41 @@ instance space \(X'\) if the following conditions are met:
   \(x \in X_n\), \(c(x) = 1\) if and only if \(c'(G(x)) = 1\).
 \end{itemize}
 
-\subsection{Preliminary Work}\label{preliminary-work}
+\subsection{Reduction}
 
-\textbf{Theorem:} the class of deterministic finite automata PAC-reduces
-to the class of node-conserving graph rewriting rulesets which achieve
-full connectivity after \(k |V(G)|\) steps on graph \(G\).
+Since the concept class $\Concepts_{\Sigma,c,n}$ is isomorphic to $\Concepts_{\Delta,c,n}$ for any $\Card{\Sigma} = \Card{\Delta}$, we'll write $\Concepts_{l,c,n}$ to denote the concept class for any label alphabet of size $l$. 
+
+\textbf{Theorem:} the class of deterministic finite automata with $m$ states over an alphabet of size $l$ PAC-reduces
+to the class $\Concepts{l+4+m,2}$, i.e., the class of concepts corresponding to the connectivity of graph grammars after $2\Card{V(G)}$ steps, over alphabets of size $l+m+4$.
 
 \textbf{Proof:}
 
-We describe for each DFA \(D\) a polynomially sized ruleset that
+We describe for each DFA $D=(Q,\Sigma,\delta,q_0,F)$ a polynomially sized ruleset that
 simulates \(D\) on transformed instances.
+
+We'll transform strings in $\Sigma^n$ into graphs with $2n+2$ vertices over the alphabet $Q\cup\Sigma\cup \Set{A,T,Z}$ where $A,T,Z$ are symbols distinct from any in $\Sigma\cup Q$.
 
 \subsubsection{Instance Transformation}\label{instance-transformation}
 
-We define a transformation \(G: \{0,1\}^n \to G_{p(n)}\) from the space
-of binary DFA inputs of length \(n\) to the space of graphs with a
-number of vertices polynomial in \(n\).
+Given a string $x = x_1x_2\dotsm x_n$, we let $G = ([2n+2],E,\ell)$ be the output graph where
 
-Take an instance \(x \in \{0,1\}^n\). For each character \(s \in x\),
-create a pair of vertices. Label one vertex \(a\), and label the other
-with \(b_0\) if \(s=0\) and \(b_1\) if \(s=1\). Add one more vertex to
-the graph and label it \(\lambda\).
+$\ell(2i+1) = x_i$, $\ell(2i) = A$ for $i < n+1$, $\ell(1) = q_0$ and $\ell(2n+2) = T$.
 
-An example input transformation for the input \(1011\) would be:
+We choose the edges as follows: $E = \Set{(2i,2i+2),(2i,2i+1)}{i\in [n]} \cup \Set{(1,2)}$.
 
-\begin{tikzpicture}
-[vertex/.style={circle, draw, fill=black, inner sep=0pt, minimum width=4pt}]
+We now define the rule sequence $\rho$ as follows:
 
-\node[vertex] (1) [label=left:$\lambda$] {};
-\node[vertex] (2) [label=left:$a$] at (0,-1) {};
-\node[vertex] (3) [label=left:$a$] at (0,-2) {};
-\node[vertex] (4) [label=left:$a$] at (0,-3) {};
-\node[vertex] (5) [label=left:$a$] at (0,-4) {};
+For every state $q\in Q$ and every symbol $a\in \Sigma$, we add a rule corresponding to the transition $\delta(q,a)$.
 
-\node[vertex] (6) [label=right:$b_1$] at (1,-1) {};
-\node[vertex] (7) [label=right:$b_0$] at (1,-2) {};
-\node[vertex] (8) [label=right:$b_1$] at (1,-3) {};
-\node[vertex] (9) [label=right:$b_1$] at (1,-4) {};
+Particularly, we add a rule of the form $(qAa|, A|\delta(q,a)|A|)$. The order of these rules doesn't matter since only one of them can be active at a time.
 
-\end{tikzpicture}
+We then add a rule $(qT, AZ)$ for each $q\in F$, and a rule $(A|Z,AZ)$.
 
-\subsubsection{Image Concept}\label{image-concept}
+The resulting concept and instance satisfy the requirements for the reduction, proving the result above.
 
-We create a rule sequence which exactly simulates the allowed
-transitions in the DFA.
+\subsection{Next Steps}
 
-First, assign to each state in the DFA a unique label, using the label
-\(\lambda\) for the start state.
-
-If the DFA transitions from the state with label \(S\) to the state with
-label \(T\) when it consumes character \(s\), add the following rule to
-the rule sequence:
-
-\begin{tikzpicture}
-[vertex/.style={circle, draw, fill=black, inner sep=0pt, minimum width=4pt}]
-
-\node[vertex] (s) [label=left:$S$] {};
-\node[vertex] (t) [label=left:$a$] at (0,-1) {};
-\node[vertex] (c) [label=right:$b_s$] at (1,-1) {};
-
-\node[vertex] (s2) [label=left:$c$] at (4,0) {};
-\node[vertex] (t2) [label=left:$T$] at (4,-1) {};
-\node[vertex] (c2) [label=right:$c$] at (5,-1) {};
-
-\draw[thick] (s2) -- (t2);
-\draw[thick] (s2) -- (c2);
-\draw[thick] (c2) -- (t2);
-
-\draw[-{Straight Barb[left]}] (2,-0.5) -- (3,-0.5);
-
-\end{tikzpicture}
-
-where \(c\) is a reserved label, not corresponding to any of the states
-of the DFA.
-
-Additionally, add the following rule to the rule sequence:
-
-\begin{tikzpicture}
-[vertex/.style={circle, draw, fill=black, inner sep=0pt, minimum width=4pt}]
-
-\node[vertex] (c) [label=below:$c$] {};
-\node[vertex] (d) [label=below:$c$] at (1,0) {};
-
-\node[vertex] (c2) [label=below:$c$] at (4,0) {};
-\node[vertex] (d2) [label=below:$c$] at (5,0) {};
-
-\draw[thick] (c2) -- (d2);
-
-\draw[-{Straight Barb[left]}] (2,0) -- (3,0);
-
-\end{tikzpicture}
+In order to show that these concepts are inherently unpredictable, we next have to show that they have polynomial VC-dimension. This is the next question we'd like to address. After doing this, we would want to see if we can get a positive result showing the PAC-learnability of this concept class under a stronger learning model, perhaps in which the learner can make membership queries or equivalence queries.
 
 \subsection{Citations}\label{citations}
 
