--- a/reports/refs.bib
+++ b/reports/refs.bib
@@ -1,3 +1,72 @@
+@inproceedings{jijkoun2007learning,
+  title={Learning to transform linguistic graphs},
+  author={Jijkoun, Valentin and De Rijke, Maarten and others},
+  booktitle={Proc. of the Second Workshop on TextGraphs: Graph-Based Algorithms
+for Natural Language Processing (TextGraphs-2)},
+  pages={53--60},
+  year={2007}
+}
+
+@article{zhu2007stochastic,
+  title={A stochastic grammar of images},
+  author={Zhu, Song-Chun and Mumford, David and others},
+  journal={Foundations and Trends{\textregistered} in Computer Graphics and
+Vision},
+  volume={2},
+  number={4},
+  pages={259--362},
+  year={2007},
+  publisher={Now Publishers, Inc.}
+}
+
+@inproceedings{oates2003estimating,
+  title={Estimating maximum likelihood parameters for stochastic context-free
+graph grammars},
+  author={Oates, Tim and Doshi, Shailesh and Huang, Fang},
+  booktitle={International Conference on Inductive Logic Programming},
+  pages={281--298},
+  year={2003},
+  organization={Springer}
+}
+
+@inproceedings{kukluk2007learning,
+  title={Learning Node Replacement Graph Grammars in Metabolic Pathways.},
+  author={Kukluk, Jacek P and You, Chang Hun and Holder, Lawrence B and Cook,
+Diane J},
+  booktitle={BIOCOMP},
+  pages={44--50},
+  year={2007}
+}
+
+@inproceedings{jonyer2002concept,
+  title={Concept formation using graph grammars},
+  author={Jonyer, Istvan and Holder, L and Cook, D},
+  booktitle={Proceedings of the {KDD} Workshop on Muti-Relational Data Mining},
+  year={2002}
+}
+
+@article{jonyer2004mdl,
+  title={MDL-based context-free graph grammar induction and applications},
+  author={Jonyer, Istvan and Holder, Lawrence B and Cook, Diane J},
+  journal={International Journal on Artificial Intelligence Tools},
+  volume={13},
+  number={01},
+  pages={65--79},
+  year={2004},
+  publisher={World Scientific}
+}
+
+@inproceedings{danos2012graphs,
+  title={Graphs, rewriting and pathway reconstruction for rule-based models},
+  author={Danos, Vincent and Feret, Jerome and Fontana, Walter and
+Harmer, Russell and Hayman, Jonathan and Krivine, Jean and Thompson-Walsh, Chris
+and Winskel, Glynn},
+  booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
+  volume={18},
+  year={2012},
+  organization={Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+}
+
 @book{gg_handbook,
   title={Handbook of graph grammars and computing by graph transformation},
   author={Ehrig, Hartmut and Rozenberg, Grzegorz and Kreowski, Hans-J{\"o}rg},
